# opaque-cf-workers-svelte-auth

./: .gitignore  README.md
authentication-backend/: Cargo.toml  README.md  wrangler.toml
authentication-backend/src/: authentication_data.rs  confirmation_email.rs  lib.rs  utils.rs
authentication-backend/src/data/: login.rs  mod.rs  profile.rs  register.rs
authentication-backend/src/handlers/: login.rs  register.rs
authentication-backend/src/opaque/: login.rs  register.rs
authentication-frontend/: package.json  pnpm-lock.yaml  svelte.config.js
authentication-frontend/src/routes/: __layout.svelte  index.svelte  login.svelte  register.svelte
authentication-rs-cli/: Cargo.toml  README.md
authentication-rs-cli/src/: main.rs
authentication-rs-lib/: Cargo.toml  README.md
authentication-rs-lib/src/: lib.rs
authentication-wasm/: Cargo.toml  README.md
authentication-wasm/src/: lib.rs  login.rs  register.rs  utils.rs
