[package]
name = "authentication-backend"
version = "0.1.0"
authors = ["Tomé Vardasca <tome@vardas.ca>"]
edition = "2021"
description = "Authentication backend for the opaque authentication on web application"
repository = "tomvardasca/authentication-backend"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.7"
serde = "1.0.132"
serde_json = "1.0.73"
opaque-ke = { version = "1.2.0", features = ["std"] }
curve25519-dalek = { version = "3.2.0", default-features = false }
authentication-rs-lib = { path = "../authentication-rs-lib" }
base64 = { version = "0.13.0"}
regex = { version = "1.5.4", default-features = false, features = ["std"] }
async-trait = "0.1.52"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
