[package]
name = "authentication-rs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opaque-ke = { version = "1.2.0", features = ["std"] }
curve25519-dalek = { version = "3", default-features = false }
argon2 = { version = "0.3.1", default-features = false, features = ["alloc"] }
digest = "0.9.0"
generic-array = "0.14.4"
sha2 = "0.9.8"
